<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:clickable="true"
    android:orientation="vertical"
    android:background="?android:selectableItemBackground">
    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_Name"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_Title"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/releaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_Year"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_genre"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/trackCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_Count"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/popularTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_Track"
        android:textSize="16sp"/>
</LinearLayout>
